--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@ sphinx-copybutton == 0.2.6
 sphinx-version-warning
 sphinx-markdown-tables
 sphinxcontrib-mermaid > 0.3
-recommonmark > 0.4.0
-sphinx-notfound-page == 0.1
-commonmarkextensions == 0.0.4
-commonmark == 0.8.0
+recommonmark == 0.5.0
+commonmarkextensions == 0.0.5
+commonmark == 0.8.1
